livello easy finito

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <!-- Main -->
     <main>
         <div class="grid-container">
-            <div class="grid-box">
-
-            </div>
+            <!-- <div class="grid-box">
+                <span>1</span>
+            </div> -->
         </div>
     </main>
     <!-- /Main -->
