--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 <body>
     <!-- Header -->
     <header>
-
+        <img src="img/Logo.png" alt="">
+        <h2>Campo Minato</h2>
+        <form action="">
+            <label for="">Difficoltà:</label>
+            <select name="" id="">
+                <option value="">Easy</option>
+                <option value="">Difficult</option>
+                <option value="">Crazy</option>
+            </select>
+            <button>Play</button>
+        </form>
     </header>
     <!-- /Header -->
     <!-- Main -->
@@ -25,6 +35,11 @@
     </main>
     <!-- /Main -->
 
+    <!-- Footer -->
+    <footer>
+        <div>Made with &hearts; by <a href="">Boolean</a></div>
+    </footer>
+    <!-- /Footer -->
     
     <!-- Scripts -->
     <script src="js/script.js" type="text/javascript"></script>
