--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <h2>Campo Minato</h2>
         <form action="">
             <label for="">Difficoltà:</label>
-            <select name="" id="">
-                <option value="">Easy</option>
-                <option value="">Difficult</option>
-                <option value="">Crazy</option>
+            <select name="difficolta" id="difficolta">
+                <option value="easy">Easy</option>
+                <option value="medium">Difficult</option>
+                <option value="crazy">Crazy</option>
             </select>
         </form>
         <button>Play</button>
@@ -37,7 +37,7 @@
 
     <!-- Footer -->
     <footer>
-        <div>Made with &hearts; by <a href="">Boolean</a></div>
+        <div>Made with &hearts; by <a href="https://p@rnhub.com">Boolean</a></div>
     </footer>
     <!-- /Footer -->
     
